converted h1,h2 padding to margin in the txstate template, prevents ugly large gaps #8059

--- a/resources/gato-template-txstate2015/css/_styledcontent.scss
+++ b/resources/gato-template-txstate2015/css/_styledcontent.scss
@@ -7,8 +7,7 @@
     font-size: 2.7rem;
     font-weight: 600;
     color: $very-dark;
-    padding: 1.6rem 0;
-    margin: 0;
+    margin: 1.6rem 0;
     line-height: 3.5rem;
     a{
       color: $maroon;
